<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.ReminderActivity">

        <include
            android:id="@+id/homeToolbar"
            layout="@layout/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_corners_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/homeToolbar">

            <TextView
                android:id="@+id/alertInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeui"
                android:paddingLeft="25dp"
                android:paddingTop="15dp"
                android:paddingRight="25dp"
                android:paddingBottom="15dp"
                android:text="@string/alert_info"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/timerOptions1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/alertInfo">

                <RadioButton
                    android:id="@+id/tenMinutes"
                    android:tag="10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:checked="true"
                    android:elevation="4dp"
                    android:fontFamily="@font/segoeui"
                    android:padding="10dp"
                    android:text="@string/ten_minutes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/radio_text"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/fifteenMinutes"
                    android:tag="15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/segoeui"
                    android:padding="10dp"
                    android:text="@string/fifteen_minutes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/radio_text"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/twentyFiveMinutes"
                    android:tag="25"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/segoeui"
                    android:padding="10dp"
                    android:text="@string/twenty_five_minutes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/radio_text"
                    android:textSize="18dp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/timerOptions2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/reminderStatus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timerOptions1">

                <RadioButton
                    android:id="@+id/thirtyMinutes"
                    android:tag="30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/segoeui"
                    android:padding="10dp"
                    android:text="@string/thirty_minutes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/radio_text"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/fortyFiveMinutes"
                    android:tag="45"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/segoeui"
                    android:padding="10dp"
                    android:text="@string/forty_five_minutes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/radio_text"
                    android:textSize="18dp" />

                <RadioButton
                    android:id="@+id/sixtyMinutes"
                    android:tag="60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:background="@drawable/radio_selector"
                    android:button="@android:color/transparent"
                    android:elevation="4dp"
                    android:fontFamily="@font/segoeui"
                    android:padding="10dp"
                    android:text="@string/sixty_minutes"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@drawable/radio_text"
                    android:textSize="18dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/reminderStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/no"
                android:fontFamily="@font/segoeui"
                android:text="@string/disable"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timerOptions2" />

            <Button
                android:id="@+id/reminderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/no"
                android:fontFamily="@font/segoeui"
                android:text="@string/disable_reminder"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderStatus" />

            <Button
                android:id="@+id/snoozeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/snooze"
                android:fontFamily="@font/segoeui"
                android:text="@string/enable_snooze"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderBtn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>